Add Movie Capture

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ annotations_output/yolo_txt/*
 input/*
 output/*
 /venv311
+credentials.json
+captures_log.csv
+last_index.txt
+token.pickle
+urls.txt
