annotation_combine etc...

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ venv
 credentials.json
 token.pickle
 ffmpeg.exe
+glitch_image_000001_folder/*
+glitch_image_1_folder/*
+merged_output/*
+reindexed_images/*
+reindexed_labels/*
